syntax = "proto3";

package authType;


service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
  rpc SignUp(SignUpRequest) returns (SignUpResponse) {};
  rpc Logout(LogoutRequest) returns (LogoutResponse) {};
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {};

  rpc AdminSignUp(AdminSignUpRequest) returns (AdminSignUpResponse) {};
  rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse) {};
}


message Image {
  string url =1;
  string name=2;
}



message User {
  string _id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string location = 5;
  string state = 6;
  string gender = 7;
  int32 followeeCount = 9;
  int32 followerCount = 10;
  string createdAt = 11;
  string updatedAt = 12;
  oneof status {
    string blocked =13;
    string deleted =14;
    string active =15;
  };
  oneof role {
    string admin=16;
    string user=17;
  };
  bool isOnline = 18;
  Image image = 19;
}

message LoginRequest {
  string email =1;
  string password = 2;
}

message LoginResponse {
  User user =1;
  string token =2;
  string refreshToken = 3;
}

message SignUpRequest {
  string name =1;
  string email =2;
  string password = 3;
}

message SignUpResponse {
  User user =1;
  string token =2;
  string refreshToken = 3;
}

message LogoutRequest {
  string userId =1;
  string token =2;
}

message LogoutResponse {

}

message RefreshRequest {
  string refreshToken =1;
}

message RefreshResponse {
  string accessToken = 1;
  User user =2;
}


message AdminLoginRequest {
  string email =1;
  string password = 2;
}

message AdminLoginResponse {
  User user =1;
  string token =2;
  string refreshToken = 3;
}

message AdminSignUpRequest {
  string email =1;
  string password = 2;
}

message AdminSignUpResponse {
  User user =1;
  string token =2;
  string refreshToken = 3;
}